Fixed padding spacing on mobile

--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -2,4 +2,11 @@
     margin: auto;
     max-width: 30rem;
     padding: var(--spacing-xl);
+    margin: var(--spacing-sm);
+}
+
+@media screen and (max-width: 700px) {
+    .dialog{
+        padding: var(--spacing-md);
+    }
 }
