--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,6 +31,14 @@
         flex-direction: column;
         align-items: center; /* can also stretch ?*/
     }
+    .form-details, .order-details{
+        flex-basis: 100%;
+        margin: var(--spacing-sm);
+    }
+    .form-step{
+        padding: var(--spacing-xl) var(--spacing-lg);
+        gap: var(--spacing-lg);
+    }
 }
 
 @media screen and (max-width: 500px) {
